# claude-channel-setup

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
.claude/hooks/: .pending-permissions.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/maintainer/: context.md  contributors.md  decisions.md  patterns.md  runs.md  standing-rules.md
python/: pyproject.toml
python/claude_channel_setup/: __init__.py  cli.py
python/claude_channel_setup/channels/: discord.py  telegram.py
python/claude_channel_setup/lib/: claude.py  config.py
python/tests/: test_claude.py  test_config.py  test_discord.py  test_telegram.py
src/: index.ts
src/channels/: discord.ts  telegram.ts
src/commands/: setup.ts
src/lib/: access.ts  claude.ts  config.ts  profile.ts
src/utils/: ui.ts
tests/: access.test.ts  claude.test.ts  config.test.ts  discord-guilds.test.ts  discord.test.ts  integration.test.ts  profile.test.ts  setup.test.ts  telegram.test.ts
