[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-channel-setup"
version = "0.1.0"
description = "Automated setup for Claude Code channel plugins (Discord, Telegram)"
requires-python = ">=3.10"
license = "MIT"
keywords = ["claude", "claude-code", "discord", "telegram", "bot", "setup", "cli"]
dependencies = [
  "httpx>=0.27.0",
]

[project.scripts]
claude-channel-setup = "claude_channel_setup.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
